Updated Namespace, Solution, and Project to NetOpenIdDict from Net5Ids4.  Added in the FirstName and LastName fields into the Identity Registration page.

--- a/Net5Ids4/Views/Shared/_LoginPartial.cshtml
+++ b/Net5Ids4/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Net5Ids4.Data
+@using NetOpenIdDict.Data
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
