--- a/Net5Ids4/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Net5Ids4/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using Net5Ids4.Areas.Identity
-@using Net5Ids4.Areas.Identity.Pages
+@using NetOpenIdDict.Areas.Identity
+@using NetOpenIdDict.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Net5Ids4.Data
+@using NetOpenIdDict.Data
