--- a/Net5Ids4/Views/_ViewImports.cshtml
+++ b/Net5Ids4/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Net5Ids4
-@using Net5Ids4.Models
+﻿@using NetOpenIdDict
+@using NetOpenIdDict.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
