--- a/XamarinJwtAuth/XamarinJwtAuth/Views/AboutPage.xaml
+++ b/XamarinJwtAuth/XamarinJwtAuth/Views/AboutPage.xaml
@@ -30,7 +30,7 @@
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
                 <Label Text="Start developing now" FontSize="Title"/>
-                <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
+                <Label Text="Test Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
                 <Label FontSize="16" Padding="0,24,0,0">
                     <Label.FormattedText>
                         <FormattedString>
@@ -44,6 +44,13 @@
                 <Button Margin="0,10,0,0" Text="Learn more"
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
+                        CornerRadius="5"
+                        TextColor="White" />
+
+                <Button Margin="0,10,0,0" Text="Go To Login"
+                        Command="{Binding LaunchLoginCommand}"
+                        BackgroundColor="{StaticResource Accent}"
+                         CornerRadius="5"
                         TextColor="White" />
             </StackLayout>
         </ScrollView>
