--- a/XamarinJwtAuth/XamarinJwtAuth/Views/LoginPage.xaml
+++ b/XamarinJwtAuth/XamarinJwtAuth/Views/LoginPage.xaml
@@ -8,7 +8,15 @@
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
-            <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}"/>
+            <Button VerticalOptions="Center" Text="Login / Roll Back to About" Command="{Binding LoginCommand}"/>
+            <Entry Placeholder="Email Address" PlaceholderColor="Olive"
+                   TextColor="Purple" Text="{Binding Username, Mode=TwoWay}" />
+            <Entry Placeholder="Password" IsPassword="True" PlaceholderColor="Olive" 
+                   TextColor= "Purple" Text="{Binding Password, Mode=TwoWay}" />
+
+            <Button VerticalOptions="Center" Text="Request JWT"
+                    Command="{Binding LoginWithJwtCommand}" />
+            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
