Working JWT Token using Resource Owner Password Grant

--- a/XamarinJwtAuth/XamarinJwtAuth/AppShell.xaml
+++ b/XamarinJwtAuth/XamarinJwtAuth/AppShell.xaml
@@ -40,6 +40,7 @@
     -->
     <TabBar>
         <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}" />
+        <ShellContent Route="RegistrationPage" ContentTemplate="{DataTemplate local:RegisterPage}"/>
     </TabBar>
 
 
