Working using pieces from https://www.davidbritch.com/2020/04/authentication-from-xamarinforms-app.html but logout functionality doesn't work and not all properties are being returned on the Auth call.

--- a/XamarinJwtAuth/XamarinJwtAuth/Views/WebAuthenticatorPage.xaml
+++ b/XamarinJwtAuth/XamarinJwtAuth/Views/WebAuthenticatorPage.xaml
@@ -6,6 +6,10 @@
     <ContentPage.Content>
         <StackLayout>
             <Button Text="Launch Web Authenticator" Clicked="LoginButtonClicked"/>
+
+            <Button Text="Get Token From Code" Clicked="OnCallAPIButtonClicked" />
+
+            <Button Text="Logout" Clicked="LogoutButtonClicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
